--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,5 @@
 @import "./mixins";
+@import "./config";
 
 .sticky {
   position: -webkit-sticky;
@@ -13,6 +14,7 @@
 
     .main {
       flex: 1;
+      max-width: calc(100% - 300px);
     }
   }
 }
@@ -20,6 +22,7 @@
 .main {
   .container {
     margin: 0 5rem;
-    padding: 2rem 2.5rem;
+    font-size: $font-size;
+    padding: 2rem 5rem;
   }
 }
