--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,6 @@
 
 body {
   margin: 0;
-  // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-  //   "Droid Sans", "Helvetica Neue", sans-serif;
   font-family: map-get($font-family, "body");
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -32,4 +30,34 @@ ul {
 a {
   text-decoration: none;
   color: hsl(0deg, 0%, 0%);
+}
+
+.img-container {
+  max-width: 100%;
+
+  img {
+    width: 100%;
+  }
+}
+
+.text-muted {
+  color: hsl(208deg, 7%, 46%);
+}
+
+.text-italic {
+  font-style: italic;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+@each $key, $value in $font-weight {
+  .#{$key} {
+    font-weight: #{$value};
+  }
 }
