--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -29,3 +29,5 @@ $font-size: 1.0625rem;
 $navbar-height: 3.75rem;
 $border: 1px solid hsl(0deg, 0%, 92.5%);
 $box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+
+$color-turquoise: hsl(174deg, 72%, 56%);
