--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -16,10 +16,18 @@
     display: flex;
     font-size: $font-size;
     padding: 1rem 1.5rem;
+    width: 100%;
 
     .navbar-content {
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      width: 100%;
+
+      p {
+        font-family: map-get($font-family, "title");
+        margin: 0;
+      }
     }
   }
 }
@@ -66,7 +74,7 @@
       width: 100%;
 
       &.active {
-        color: hsl(174deg, 72%, 56%);
+        color: $color-turquoise;
       }
     }
   }
